# repaso_cuda

./: CMakeLists.txt  kernel_espejo.cu  kernel_grises.cu  kernel_mediana.cu  kernel_suma.cu  main.cu  main_cuda.cpp  main_cuda_bordes.cpp  main_cuda_espejo.cpp  main_cuda_grises.cpp  main_cuda_mediana.cpp  main_cuda_rotar.cpp  main_cuda_suma.cpp  utils.cpp  utils.h
